tests/errors/unknown_symbol_after_pastes.err
resolver error: unknown symbol
 ==> ./tests/errors/unknown_symbol_after_pastes.tau:4:9
4 |    d : xxx = 1;
  |        ^^^ use of an undefined symbol
